# Head-First-C

./: CMakeLists.txt  Dockerfile  README.md  main.c  main1.c
Chapter2.5_String_Theory/: string1.h
Chapter2_Memory_Pointers/: pointer1.h
Chapter3_Small_Tools/: tool.h
Chapter4_Break_Build/: break.h
Chapter5_Structures/: structure.h
Chapter6_Building_Bridges/: bridge.h
Chapter7_Advanced_Functions/: advance.h
Chapter8_Static_And_Dynamic_Libraries/: libraries.h
